[gd_scene load_steps=6 format=2]

[ext_resource path="res://LineEdit.gd" type="Script" id=1]
[ext_resource path="res://SearchBar.gd" type="Script" id=2]
[ext_resource path="res://theme.theme" type="Theme" id=3]
[ext_resource path="res://Button.gd" type="Script" id=4]

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 1, 1, 1, 1 )

[node name="SearchBar" type="GridContainer"]
margin_right = 500.0
margin_bottom = 40.0
mouse_filter = 0
size_flags_horizontal = 3
columns = 6
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineEdit" type="LineEdit" parent="."]
margin_right = 80.0
margin_bottom = 40.0
focus_neighbour_right = NodePath("../Button")
focus_mode = 1
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 3 )
script = ExtResource( 1 )

[node name="Button" type="Button" parent="."]
margin_left = 84.0
margin_right = 164.0
margin_bottom = 40.0
focus_neighbour_left = NodePath("../LineEdit")
focus_neighbour_right = NodePath("../Button2")
focus_mode = 1
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 3 )
custom_styles/focus = SubResource( 2 )
flat = true
script = ExtResource( 4 )

[node name="Button2" type="Button" parent="."]
margin_left = 168.0
margin_right = 248.0
margin_bottom = 40.0
focus_neighbour_left = NodePath("../Button")
focus_neighbour_right = NodePath("../Button3")
focus_mode = 1
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 3 )
custom_styles/focus = SubResource( 2 )
flat = true
script = ExtResource( 4 )

[node name="Button3" type="Button" parent="."]
margin_left = 252.0
margin_right = 332.0
margin_bottom = 40.0
focus_neighbour_left = NodePath("../Button2")
focus_neighbour_right = NodePath("../Button4")
focus_mode = 1
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 3 )
custom_styles/focus = SubResource( 2 )
flat = true
script = ExtResource( 4 )

[node name="Button4" type="Button" parent="."]
margin_left = 336.0
margin_right = 416.0
margin_bottom = 40.0
focus_neighbour_left = NodePath("../Button3")
focus_neighbour_right = NodePath("../Button5")
focus_mode = 1
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 3 )
custom_styles/focus = SubResource( 2 )
flat = true
script = ExtResource( 4 )

[node name="Button5" type="Button" parent="."]
margin_left = 420.0
margin_right = 500.0
margin_bottom = 40.0
focus_neighbour_left = NodePath("../Button4")
focus_mode = 1
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 3 )
custom_styles/focus = SubResource( 2 )
flat = true
script = ExtResource( 4 )
[connection signal="focus_entered" from="LineEdit" to="LineEdit" method="_on_LineEdit_focus_entered"]
[connection signal="focus_exited" from="LineEdit" to="LineEdit" method="_on_LineEdit_focus_exited"]
[connection signal="gui_input" from="LineEdit" to="." method="_on_LineEdit_gui_input"]
[connection signal="text_entered" from="LineEdit" to="LineEdit" method="_on_LineEdit_text_entered"]
